--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body { height: 100%; }
+/* body { height: 100%; } */
 
 strong {
     font-weight: 500;
