--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-body { height: 100%; }
+body {
+    height: 100%;
+}
 
 strong {
     font-weight: 500;
 }
+
+
+/* @layer base {
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: 'Clash Grotesk', sans-serif !important;
+    }
+} */
