--- a/app/globals.css
+++ b/app/globals.css
@@ -2,18 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
-    width: 100%;
-    height: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
 }
+
 
 strong {
     font-weight: 500;
 }
 
-html {
-    scroll-behavior: smooth;
-}
 
 /* @layer base {
 
